# roomba-c-library

./: .gitignore  Doxyfile  LICENSE.md  Makefile.am  Makefile.in  README.md  aclocal.m4  annotated.html  autogen.sh  classes.html  configure  configure.ac  deprecated.html  dir_0964d109c436f5d0cbe6718ecdfac6a6.html  dir_0964d109c436f5d0cbe6718ecdfac6a6.js  dir_97aefd0d527b934f1d99a682da8fe6a9.html  dir_97aefd0d527b934f1d99a682da8fe6a9.js  files.html  functions.html  functions_vars.html  globals.html  globals_0x62.html  globals_0x63.html  globals_0x64.html  globals_0x65.html  globals_0x66.html  globals_0x67.html  globals_0x68.html  globals_0x69.html  globals_0x6c.html  globals_0x6d.html  globals_0x6e.html  globals_0x70.html  globals_0x71.html  globals_0x72.html  globals_0x73.html  globals_0x77.html  globals_defs.html  globals_dup.js  globals_enum.html  (+80 more)
html/: annotated.js  deprecated.html  dir_97aefd0d527b934f1d99a682da8fe6a9.html  globals.html  globals_0x63.html  globals_0x65.html  globals_0x66.html  globals_0x67.html  globals_0x6c.html  globals_0x6e.html  globals_0x71.html  globals_0x77.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  group__reader.html  group__reader__writer.html  group__roomba__command.html  group__roomba__commands__clean.html  group__roomba__commands__clean.js  group__roomba__commands__extra.html  group__roomba__commands__extra.js  group__roomba__commands__motor.js  group__roomba__commands__script.html  group__roomba__commands__script__events.html  group__roomba__commands__script__events.js  group__roomba__commands__start.html  group__roomba__commands__start.js  group__roomba__contol.html  group__roomba__def.html  group__roomba__def.js  group__roomba__error.js  group__roomba__error__stream.html  group__roomba__error__stream.js  group__roomba__oi__modes.html  group__roomba__oi__modes.js  group__roomba__sensor.js  group__roomba__sensor__database.js  group__roomba__sensor__extern.html  (+25 more)
html/search/: all_64.js  all_69.js  all_6f.html  all_71.js  enums_72.js  enumvalues_67.js  enumvalues_69.js  enumvalues_73.html  enumvalues_73.js  functions_72.js  groups_67.html  groups_69.js  groups_6d.html  groups_6f.html  groups_6f.js  groups_70.html  groups_70.js  groups_72.js  groups_73.js  search.js  typedefs_63.html  typedefs_72.js  typedefs_73.js  variables_73.js
includes/: roomba.h  roomba_command.h  roomba_contol.h  roomba_def.h  roomba_extra.h  roomba_print.h  roomba_repeat.h  roomba_sensor_database.h  roomba_stream.h
latex/: annotated.tex  deprecated.tex  dir_0964d109c436f5d0cbe6718ecdfac6a6.tex  dir_97aefd0d527b934f1d99a682da8fe6a9.tex  doxygen.sty  files.tex  group__reader.tex  group__reader__writer.tex  group__roomba__command.tex  group__roomba__command__mode.tex  group__roomba__commands.tex  group__roomba__commands__clean.tex  group__roomba__commands__extra.tex  group__roomba__commands__motor.tex  group__roomba__commands__script.tex  group__roomba__commands__script__events.tex  group__roomba__commands__sensor.tex  group__roomba__commands__start.tex  group__roomba__contol.tex  group__roomba__def.tex  group__roomba__error.tex  group__roomba__error__stream.tex  group__roomba__extra.tex  group__roomba__oi__modes.tex  group__roomba__print.tex  group__roomba__repeat.tex  group__roomba__sensor.tex  group__roomba__sensor__database.tex  group__roomba__sensor__extern.tex  group__roomba__sensor__group.tex  group__roomba__sensor__intern.tex  group__roomba__stream.tex  group__writer.tex  modules.tex  refman.tex  roomba_8h.tex  roomba__command_8h.tex  roomba__contol_8h.tex  roomba__def_8h.tex  roomba__extra_8h.tex  (+8 more)
man/man3/: ROOMBA_CONTOLID_ERROR.3  ROOMBA_ERROR_HEADER_NOT_FOUND.3  ROOMBA_ERROR_TO_BIG.3  ROOMBA_EVNET_BUMP_LEFT.3  ROOMBA_EXTRA_STREAM.3  ROOMBA_FULL.3  ROOMBA_LEDS_SCHEDULING.3  ROOMBA_MAX.3  ROOMBA_MAX_DATA.3  ROOMBA_SCRIPT_SHOW.3  ROOMBA_SENSOR_BUMPS_WHEEL_DROPS.3  ROOMBA_SENSOR_GROUP_100.3  ROOMBA_SENSOR_OI_MODE.3  ROOMBA_SENSOR_OI_MODE_OFF.3  ROOMBA_START.3  ROOMBA_STREAM.3  _home_andreas_roomba_lib_.3  _home_andreas_roomba_lib_includes_.3  commandID.3  commandString.3  commandString_t.3  data.3  deprecated.3  reader.3  reader_writer.3  roomba.h.3  roombaCommand.3  roombaSensorData.3  roombaStatus.3  roomba_command.3  roomba_command.h.3  roomba_command_mode.3  roomba_commands.3  roomba_commands_clean.3  roomba_commands_extra.3  roomba_commands_motor.3  roomba_commands_script.3  roomba_commands_script_events.3  roomba_commands_sensor.3  roomba_commands_start.3  (+32 more)
search/: all_63.js  all_65.js  all_67.js  all_71.html  all_72.js  all_73.js  all_76.html  classes_63.js  classes_72.js  classes_73.js  enums_72.html  enumvalues_67.html  enumvalues_69.html  enumvalues_71.html  files_72.html  files_72.js  groups_65.html  groups_67.js  groups_69.html  groups_6d.js  groups_72.html  groups_73.html  pages_76.html  typedefs_63.js  typedefs_72.html  typedefs_73.html  variables_63.js
src/: roomba.c  roomba_command.c  roomba_extra.c  roomba_print.c  roomba_repeat.c  roomba_sensor_database.c
test/: Makefile  roombaCommandTest.c  roombaCommandTest.h  roombaExtraTest.c  roombaExtraTest.h  roombaLocalTest.c  roombaRepeatTest.c  roombaRepeatTest.h  roombaStreamTest.c  roombaStreamTest.h  roombaTest.c  roombaTest.h  unit.c  unit.h
